[tool.poetry]
name = "ucmaxl"
version = "0.1.0"
description = "Simple helper for accessing UCM data via AXL."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
urllib3 = "^1.26.14"
requests = "^2.28.1"
zeep = "^4.2.1"
pydantic = "^1.10.4"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
